# binTempSensor

./: .gitignore  readme.md
Arduino_GSM/: SIM900_DHT.ino  readme.md
Arduino_GSM/ChangedCodeToWhatIThinkWillWork/: ChangedCodeToWhatIThinkWillWork.ino
Arduino_GSM/GSMandTemperatureSensorNoNANCheckingUsingLowPower/: GSMandTemperatureSensorNoNANCheckingUsingLowPower.ino
Arduino_GSM/GSMandTemperatureSensorTest/: GSMandTemperatureSensorTest.ino
Arduino_GSM/SIM900_DHT/: SIM900_DHT.ino
Arduino_GSM/arduino_code_for_controlling_three_DHT22/: arduino_code_for_controlling_three_DHT22.ino
archive/: readme.md
archive/ChangedCodeToWhatIThinkWillWork/: ChangedCodeToWhatIThinkWillWork.ino
archive/arduino_code_for_controlling_three_DHT22/: arduino_code_for_controlling_three_DHT22.ino
archive/gsm_and_collect_data/: gsm_and_collect_data.ino
code/: code_to_retrieveTemp_andSendViaRadio.cpp  readme.md
code/arduino_code_for_controlling_three_DHT22/: arduino_code_for_controlling_three_DHT22.ino
code/four_bins/: four_bins.ino
custom_libraries/: CMakeLists.txt  DHT_U.cpp  Makefile  bin_sensor.cpp  test_runner.cpp
custom_libraries/bin_sensor_library/: DHT_U.h  DHT_U.hpp  bin_sensor.hpp
ecad/: ecad-cache.lib  ecad.kicad_pcb  ecad.net  ecad.pro  ecad.sch
how_to_docs/: assemble_pcb.md  build_temp_cable.md  custom_library.md  ds18b20_temp_cable.md  ds18b20_temp_cable_pcbonly.md  full_kit_instructions.md  internal_testing_and_address_logging.md  mkr_1400_antenna_assembly.md  pcb_only_kit_instructions.md  upload_grain_monitoring_code.md
short_test/: short_test.ino
(+20 files in other folders)
